@@ -30,6 +30,9 @@ the internal queue of pending decisions is set by this number. It should be a po
 .TP
 .B \-\-user\ NN
 run as a particular user rather than root. This may either be numeric or a user name from the passwd database.
+.TP
+.B \-\-group\ NN
+run using a particular group rather than root. This may either be numeric or a user name from the passwd database.
 .SH SIGNALS
 .TP
 SIGTERM
